Changed background to grey

--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -3,7 +3,7 @@ html, body {
   color: black;
 }
 body {
-  background-color: #f7f0ff;
+  background-color: #f9f9f9;
   font: 95% helvetica,arial,freesans,clean,sans-serif;
   *font-size: small;
 }
