--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -40,6 +40,12 @@ h1 {
   font-weight: bold;
   margin-bottom: 0.5em;
 }
+h1 a {
+  color: #000;
+}
+h1 a:hover {
+  text-decoration: none;
+}
 h1 .ship {
   color: #036;
 }
