--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -76,7 +76,7 @@ nav .user {
 
 #repo-list {
   margin-left: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 0.75em;
   font-size: 1.2em;
 }
 #repo-list .repo-name {
@@ -87,6 +87,7 @@ a.button, button {
   background: #036 url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAyCAYAAACd+7GKAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAClJREFUeNpi/v//vwMTAwPDfzjBgMpFI/7hFSOT9Y8qRuF3JLoHAQIMAHYtMmRA+CugAAAAAElFTkSuQmCC") repeat-x;
   display: inline-block;
   padding: 0.6em 0.9em;
+  margin: 0.25em 0;
   color: #fff;
   text-decoration: none;
   font-weight: bold;
