--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -5,7 +5,7 @@ html {
   display: block;
 }
 body {
-  font: 95% helvetica,arial,freesans,clean,sans-serif;
+  font: 100% helvetica,arial,freesans,clean,sans-serif;
   *font-size: small;
   padding: 1em 2em;
 }
@@ -25,9 +25,7 @@ h1 {
 }
 h1 a {
   color: #000;
-}
-h1 a:hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 h1 .ship {
   color: #036;
@@ -47,7 +45,7 @@ table {
 }
 
 input[type=text], input[type=password], input[type=image], textarea {
-  font: 99% helvetica,arial,freesans,sans-serif;
+  font: 100% helvetica, arial, freesans, sans-serif;
   padding: 1px 0;
   margin-bottom: 0.5em;
 }
@@ -60,7 +58,6 @@ optgroup {
 
 nav {
   float: right;
-  font-weight: bold;
 }
 nav ul {
   display: inline;
@@ -68,6 +65,9 @@ nav ul {
 nav ul li {
   display: inline;
   margin-left: 0.8em;
+}
+nav a {
+  font-weight: bold;
 }
 nav .user {
   color: #000;
