--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -75,15 +75,9 @@ nav .user {
 }
 
 #repo-list {
-  margin-left: 1em;
-  margin-bottom: 0.75em;
-  font-size: 1.2em;
+  font-size: 1.1em;
+  margin: 0 0 1.3em 0.5em;
 }
-#repo-list .repo-name {
-  font-weight: bold;
-}
-
-span { /* button padding in firefox */ vertical-align: middle; }
 
 a.button, button {
   background: #ddd;
@@ -113,7 +107,7 @@ a.button, button {
   text-shadow: 0px 1px 1px rgba(255,255,255,0.75);
   font-weight: bold;
 
-  padding: 0.4em 0.8em;
+  padding: 0.35em 0.6em;
   text-decoration: none !important;
   cursor: pointer;
 }
