--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -79,6 +79,10 @@ optgroup {
   margin: 0 0 1.3em 0.5em;
 }
 
+button {
+  margin-top: 0.45em;
+}
+
 a.button, button {
   background: #ddd;
   background: -webkit-gradient(linear, left top, left bottom,
